--- a/BookStore.API/BookStoreWebApp/src/app/nav/nav.component.html
+++ b/BookStore.API/BookStoreWebApp/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" routerLink="/">BookStore</a>
     <button
       class="navbar-toggler"
